[gd_scene load_steps=3 format=3 uid="uid://d2olj4hggpetj"]

[ext_resource type="Script" uid="uid://bs0h23gu77emd" path="res://addons/rhythm_level_editor/rhythm_composer.gd" id="1_62fbc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_66pr8"]

[node name="RhythmComposer" type="BoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
vertical = true
script = ExtResource("1_62fbc")

[node name="MainView" type="BoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.43
alignment = 1

[node name="Label" type="Label" parent="MainView"]
layout_mode = 2
text = "Input 1"

[node name="Label2" type="Label" parent="MainView"]
layout_mode = 2
text = "Input 1"

[node name="Label3" type="Label" parent="MainView"]
layout_mode = 2
text = "Input 1"

[node name="Label4" type="Label" parent="MainView"]
layout_mode = 2
text = "Input 1"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.56
stretch = true
mouse_target = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 524)
size_2d_override_stretch = true
render_target_update_mode = 0

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(576, 324)
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sprite2D" type="Sprite2D" parent="SubViewportContainer/SubViewport/Camera2D"]
position = Vector2(-284, -169)
scale = Vector2(122, 96)
texture = SubResource("PlaceholderTexture2D_66pr8")

[node name="Sprite2D2" type="Sprite2D" parent="SubViewportContainer/SubViewport/Camera2D"]
position = Vector2(-186, 144)
scale = Vector2(122, 96)
texture = SubResource("PlaceholderTexture2D_66pr8")

[node name="Sprite2D3" type="Sprite2D" parent="SubViewportContainer/SubViewport/Camera2D"]
position = Vector2(288, -128)
scale = Vector2(122, 96)
texture = SubResource("PlaceholderTexture2D_66pr8")

[node name="Sprite2D4" type="Sprite2D" parent="SubViewportContainer/SubViewport/Camera2D"]
position = Vector2(171, 98)
scale = Vector2(122, 96)
texture = SubResource("PlaceholderTexture2D_66pr8")

[node name="Control" type="BoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Dashboard" type="PanelContainer" parent="Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.74

[node name="MarginContainer" type="MarginContainer" parent="Control/Dashboard"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Contents" type="BoxContainer" parent="Control/Dashboard/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Main Buttons" type="BoxContainer" parent="Control"]
layout_mode = 2
vertical = true

[node name="Clear Composer" type="Button" parent="Control/Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Clear Composer"

[node name="Load Map" type="Button" parent="Control/Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Load Map"

[node name="Save Map" type="Button" parent="Control/Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Save Map"

[connection signal="pressed" from="Control/Main Buttons/Clear Composer" to="." method="_on_clear_composer_pressed"]
[connection signal="pressed" from="Control/Main Buttons/Load Map" to="." method="_on_load_map_pressed"]
[connection signal="pressed" from="Control/Main Buttons/Save Map" to="." method="_on_save_map_pressed"]
